--- a/docs/blog/posts/5.md
+++ b/docs/blog/posts/5.md
@@ -1,5 +1,6 @@
 ---
 # draft: true
+comments: true
 date:
   created: 2024-09-21
 ---
@@ -47,7 +48,7 @@ date:
     TODO
 
 ???+ note "思考题 4.11 定理 4.1 提到的等价关系的内涵是什么?"
-    $e_1 \sim e_2$ 当且仅当他们在同一个块中
+    $e_1 \sim e_2$ 当且仅当他们在同一个圈中
 
 ???+ note "思考题 4.12 块-割点图含圈吗?"
     不含，否则考虑块-割点图 $H$ 圈上的一个割点 $v$，任意两个点（不含 $v$）之间都至少有一条不经过 $v$ 的路
